fix for bug with navigation still showing when hidden, as well as color change not happening correctly when jumping too fast with scrolling

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,10 +3,11 @@
   /* -webkit-transform: translate3d(700px, 0, -800px) rotateY(30deg) !important; */
   border: 1px solid #888;
   -webkit-transform: rotateY(30deg) !important;
+  -ms-transform: rotateY(30deg) !important;
   transform: rotateY(30deg) !important;
 }
 .parallax__debug * {
-  opacity: 0;
+  opacity: 0.5;
 }
 
 .main-page, #header, #parallax, #main-page {
@@ -111,12 +112,14 @@
   position: fixed;
   top: 56px;
   left: 0;
+  display: none;
   opacity: 0;
   transition: opacity 0.4s ease;
   font-size: 16px;
   line-height: 16px;
 }
 #title.expanded #nav {
+  display: block;
   opacity: 1.0;
 }
 #nav > a {
@@ -156,11 +159,16 @@
   height: 1055px;
   background-repeat: no-repeat;
   background-position: center top;
+  -webkit-background-size: auto;
   background-size: auto;
   position: fixed;
   will-change: transform;
   -webkit-transform: translate3d(0,0,0);
+  -ms-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
   -webkit-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 .parallax.tall { height: 2110px; }
 .parallax.cloud1 { height: 3110px; }
